--- a/configs/mc.ini
+++ b/configs/mc.ini
@@ -63,7 +63,8 @@
     drightmiddle = ╢
 
 [core]
-    _default_ = color128;color234
+#    _default_ = color128;color234
+    _default_ = color128;
     selected = color250;color60
     marked = color228
     markselect = color228;color60
