--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -4,6 +4,7 @@
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
 transition-length = 300
+#transition-length = 0
 transition-pow-x = 0.1
 transition-pow-y = 0.1
 transition-pow-w = 0.1
@@ -16,6 +17,7 @@ size-transition = true
 #################################
 # requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
 corner-radius = 10.0;
+#corner-radius = 0;
 rounded-corners-exclude = [
   #"window_type = 'normal'",
   "class_g = 'awesome'",
@@ -26,7 +28,7 @@ rounded-corners-exclude = [
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   #"class_g = 'TelegramDesktop'",
-  "class_g = 'firefox'",
+#  "class_g = 'firefox'",
   "class_g = 'Thunderbird'"
 ];
 round-borders = 1;
